--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\House\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\SRC\\flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=2.0.2
 flutter.versionCode=1
