--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: animese
 description: Aplicativo de anime
-version: 2.0.0+1
+version: 2.0.3+1
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
@@ -8,13 +8,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^0.5.6+3 #dados no celular
-  swipe_button: ^0.0.2 #on tap swipe
+  shared_preferences: ^0.5.7  #dados no celular
   http: ^0.12.0+4 #Rquisição
   video_box: ^0.11.4
-  flutter_speed_dial: ^1.2.5 #Float button player
-  url_launcher: ^5.4.2 #abri externo
   cached_network_image: ^2.1.0+1
+  firebase_admob: ^0.9.3+2
+
+
 
 
 dev_dependencies:
