--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: animese
 description: Aplicativo de anime
-version: 2.0.3+1
+version: 2.1.5+1
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
@@ -9,10 +9,11 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^0.5.7  #dados no celular
-  http: ^0.12.0+4 #Rquisição
-  video_box: ^0.11.4
-  cached_network_image: ^2.1.0+1
-  firebase_admob: ^0.9.3+2
+  http: ^0.12.1 #Rquisição
+  video_box: ^0.12.0 #Player de vídeo
+  cached_network_image: ^2.2.0 # Loading image
+  firebase_admob: ^0.9.3+2 # Propaganda
+  wakelock: ^0.1.4+1 #Lock wake
 
 
 
