--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\House\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\SRC\\flutter
-flutter.buildMode=debug
-flutter.versionName=2.1.5
-flutter.versionCode=1
+flutter.buildMode=release
+flutter.versionName=2.2.7
+flutter.versionCode=7
